# bitsery

./: CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
doc/: README.md
doc/design/: README.md
doc/tutorial/: first_extension.md  hello_world.md
examples/: CMakeLists.txt  basic_usage.cpp  bit_packing.cpp  brief_syntax.cpp  composite_types.cpp  context_usage.cpp  file_stream.cpp  forward_backward_compatibility.cpp  inheritance.cpp  non_default_constructible.cpp  raw_pointers.cpp  smart_pointers_with_polymorphism.cpp
include/bitsery/: brief_syntax.h  deserializer.h  serializer.h
include/bitsery/adapter/: buffer.h  measure_size.h  stream.h
include/bitsery/brief_syntax/: array.h  bitset.h  chrono.h  deque.h  list.h  map.h  memory.h  optional.h  queue.h  set.h  slist.h  stack.h  string.h  tuple.h  unordered_map.h  unordered_set.h  variant.h  vector.h
include/bitsery/details/: adapter_bit_packing.h  adapter_common.h  brief_syntax_common.h  not_defined_type.h  serialization_common.h
include/bitsery/ext/: compact_value.h  eastl_bitset.h  eastl_chrono.h  eastl_map.h  eastl_optional.h  eastl_queue.h  eastl_set.h  eastl_smart_ptr.h  eastl_stack.h  eastl_tuple.h  eastl_variant.h  entropy.h  inheritance.h  pointer.h  value_range.h
include/bitsery/ext/utils/: composite_type_overloads.h  pointer_utils.h  polymorphism_utils.h  rtti_utils.h
include/bitsery/traits/: array.h  deque.h  list.h  slist.h  string.h  vector.h
include/bitsery/traits/core/: eastl_defaults.h  traits.h
tests/: CMakeLists.txt  adapter.cpp  brief_syntax.cpp  data_endianness.cpp  data_operations.cpp  data_writing.cpp  not_default_constructible.cpp  serialization.cpp  serialization_container.cpp  serialization_context.cpp  serialization_ext_compact_value.cpp  serialization_ext_eastl_bitset.cpp  serialization_ext_eastl_chrono.cpp  serialization_ext_eastl_map.cpp  serialization_ext_eastl_optional.cpp  serialization_ext_eastl_queue.cpp  serialization_ext_eastl_set.cpp  serialization_ext_eastl_smart_ptr.cpp  serialization_ext_eastl_stack.cpp  serialization_ext_eastl_tuple.cpp  serialization_ext_eastl_variant.cpp  serialization_ext_entropy.cpp  serialization_ext_growable.cpp  serialization_ext_inheritance.cpp  serialization_ext_pointer.cpp  serialization_ext_pointer_polymorphic_types.cpp  serialization_ext_pointer_with_allocator.cpp  serialization_ext_value_range.cpp  serialization_objects.cpp  serialization_size.cpp  serialization_test_utils.h  serialization_text.cpp  serialization_values.cpp
